--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <!--
+Daniel Yentin
+IntroCS pd7 sec11
+HW2 -- Publishio!
+2021-2-5
+-->
   <head>
     <title>Kosha</title>
   </head>
