--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@ HW2 -- Publishio!
   <head>
     <title>Kosha</title>
   </head>
-  <h1>Pickle</h1>
+  <h1>Team Pickle</h1>
   <h2>
     Daniel Yentin
+    <br>
     Linsey Wong
+    <br>
     Fahim Khan 
   </h2>
 </html>
