--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <!--
+<!--
 Daniel Yentin
 IntroCS pd7 sec11
-HW2 -- Publishio!
-2021-2-5
+HW3 -- Thank you for coming to my TED talk!
+2021-2-11
 -->
-  <head>
-    <title>Kosha</title>
-  </head>
-  <h1>Team Pickle</h1>
-  <h2>
-    Daniel Yentin
-  </h2>
-  Linsey Wong
-  <br>
-  Fahim Khan 
-</html>
+<!DOCTYPE html>
+  <html>
+    <body>
+      <h1>Welcome to my ted talk on Pickles!</h1>
+      <ul>
+        <li>What are pickels?</li>
+        <li></li>
+        <li></li>
+        <li>Teamate Showcase</li>
+      </ul>
+
+      <h3>Show casing team:
+        <br>
+        <a href="">Linsey Wong</a>
+        <br>
+        <a href="">Fahim Khan</a>
+      </h3> 
+    </body>
+  </html>
