--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Daniel Yentin
+Daniel Yentin, Linsey Wong, Fahim Khan
 IntroCS pd7 sec11
 HW3 -- Thank you for coming to my TED talk!
 2021-2-11
@@ -10,16 +10,31 @@ HW3 -- Thank you for coming to my TED talk!
       <h1>Welcome to my ted talk on Pickles!</h1>
       <ul>
         <li>What are pickels?</li>
-        <li></li>
-        <li></li>
-        <li>Teamate Showcase</li>
+        <li>The making of a pickel.</li>
+        <li>Culinary uses of pickels.</li>
+        <li>Teamate Showcase.</li>
       </ul>
 
-      <h3>Show casing team:
+      <h2>What are pickels?</h2>
+      <p>
+        place holder
+      </p>
+
+      <h2>The making of a pickel</h2>
+      <p>
+        placeholder
+      </p>
+
+      <h2>Culinary uses of pickels</h2>
+      <p>
+        placeholder
+      </p>
+
+      <h3>Showcasing team:
         <br>
-        <a href="">Linsey Wong</a>
+        <a href="https://github.com/LinseyWong/web/blob/main/index.html">Linsey Wong</a>
         <br>
-        <a href="">Fahim Khan</a>
+        <a href="https://github.com/fahimkhan17/web/blob/main/index.html">Fahim Khan</a>
       </h3> 
     </body>
   </html>
