--- a/index.html
+++ b/index.html
@@ -6,28 +6,32 @@ HW3 -- Thank you for coming to my TED talk!
 -->
 <!DOCTYPE html>
   <html>
+    <title>Pickels!</title>
     <body>
-      <h1>Welcome to my ted talk on Pickles!</h1>
+      <h1>Welcome to my ted talk on pickles!</h1>
       <ul>
         <li>What are pickels?</li>
-        <li>The making of a pickel.</li>
-        <li>Culinary uses of pickels.</li>
-        <li>Teamate Showcase.</li>
+        <li>The making of a pickel</li>
+        <li>Culinary uses of pickels</li>
+        <li>Teamate Showcase</li>
       </ul>
 
       <h2>What are pickels?</h2>
       <p>
         place holder
+        <a href=""></a>
       </p>
 
       <h2>The making of a pickel</h2>
       <p>
         placeholder
+        <a href=""></a>
       </p>
 
       <h2>Culinary uses of pickels</h2>
       <p>
         placeholder
+        <a href=""></a>
       </p>
 
       <h3>Showcasing team:
