--- a/index.html
+++ b/index.html
@@ -6,39 +6,59 @@ HW3 -- Thank you for coming to my TED talk!
 -->
 <!DOCTYPE html>
   <html>
-    <title>Pickels!</title>
+    <head>
+      <title>Pickles!</title>
+    </head>  
     <body>
       <h1>Welcome to my ted talk on pickles!</h1>
       <ul>
-        <li>What are pickels?</li>
-        <li>The making of a pickel</li>
-        <li>Culinary uses of pickels</li>
+        <li>What are pickles</li>
+        <li>The making of a pickle</li>
+        <li>The diffrent types of pickles</li>
         <li>Teamate Showcase</li>
       </ul>
 
-      <h2>What are pickels?</h2>
+      <h2>The History of pickles: </h2>
       <p>
-        place holder
-        <a href=""></a>
+        Pickled Cucumbers, or as they are more commenly known as, pickles, have a suprisngly long and vast history. <br> 
+        Pickles are thought to be more then 4,000 years old! Some of the earliest known examples of pickles dates back to 2400 B.C. <br >
+        when mesopotamians pickleed cucumbers for later consumption. It is even known that Cleopatra and Julius Caesar both ate pickles <br>
+        since the first believed it improved her beauty, and the latter believed that it made you a more powerful warrior. <br>
+        During the age of exploration, the popularity of pickles really took off. On his voyage to the Americas, Christopher Columbus <br>
+        brought pickles with him on his trip, since they stayed good for a long period of time and prevented scurvy. During the 19th and 20th <br>
+        centuries H.J. Heinz would start one of the successful pickling companies ever.      
+        <br>  
+        <a href="https://www.history.com/news/pickles-history-timeline">Refrences</a>
       </p>
 
-      <h2>The making of a pickel</h2>
-      <p>
-        placeholder
-        <a href=""></a>
-      </p>
-
-      <h2>Culinary uses of pickels</h2>
-      <p>
-        placeholder
-        <a href=""></a>
-      </p>
-
-      <h3>Showcasing team:
+      <h2>The making of a pickle:</h2>
+      <p> 
+        Pickled cucumbers are made as their name suggests, pickling. A cucmber is submerged in a solution of acidic brine which ferments them <br>
+        and makes them go sour and salty. The proccess is started by preparing the brine which is a mix of spices, which traditionally includes <br>
+        garlic, horseradish, and dill. The most impostant ingrediant in the brin though is salt, lots and lots of salt. The more salt that you <br>
+        add the more sour the pickle will turn out to be. The sourness of the pcikle is also influenced by the amount of time given to the <br>
+        fermentation proccess of the pickles. 
         <br>
-        <a href="https://github.com/LinseyWong/web/blob/main/index.html">Linsey Wong</a>
-        <br>
-        <a href="https://github.com/fahimkhan17/web/blob/main/index.html">Fahim Khan</a>
+        <a href="https://en.wikipedia.org/wiki/Pickled_cucumber#Types">Refrences</a>
+      </p>
+
+      <h2>The diffrent types of pickles:</h2>
+      <p>
+          There are a plethera of diffrent types of pickles. Types of pickles include: Bread-and-butter, Gherkin, Kosher dill, Hungarian, <br>
+          Polish and German, and Lime. All these pickles differ mainly in the type of cucumber used and the ingredients used in the brine. <br>
+          For example pickles such as the Bread-and-butter, and Polish are sweeter in comparison to the other types of pickles since <br> 
+          their brine includes sugar. Pickles such as Gherkins are made with baby cucumbers while most other pickles are made with <br>
+          full-size cucumbers. 
+          <br>
+        <a href="https://en.wikipedia.org/wiki/Pickled_cucumber#Types">Refrences</a>
+      </p>
+
+      <h3>Showcasing Team Pickle:
+        <h4>
+          <a href="https://github.com/LinseyWong/web/blob/main/index.html">Linsey Wong</a>
+          <br>
+          <a href="https://github.com/fahimkhan17/web/blob/main/index.html">Fahim Khan</a>
+        </h4>
       </h3> 
     </body>
   </html>
