--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ HW3 -- Thank you for coming to my TED talk!
         <li><a href="http://127.0.0.1:5500/HTML/index.html#id4">Teamate Showcase</a></li>
       </ul>
 
+      <img src="Pickle Jar.jpg" alt="Pickle Jar" height="128" width="128">
+
       <div id = "id1">
         <h2>The History of pickles: </h2>
         <p>
