--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ HW3 -- Thank you for coming to my TED talk!
     <body>
       <h1>Welcome to my ted talk on pickles!</h1>
       <ul>
-        <li><a href="http://127.0.0.1:5500/HTML/index.html#id1">What are pickles</a></li>
-        <li><a href="http://127.0.0.1:5500/HTML/index.html#id2">The making of a pickle</a></li>
-        <li><a href="http://127.0.0.1:5500/HTML/index.html#id3">The diffrent types of pickles</a></li>
-        <li><a href="http://127.0.0.1:5500/HTML/index.html#id4">Teamate Showcase</a></li>
+        <li><a href="#id1">What are pickles</a></li>
+        <li><a href="#id2">The making of a pickle</a></li>
+        <li><a href="#id3">The diffrent types of pickles</a></li>
+        <li><a href="#id4">Teamate Showcase</a></li>
       </ul>
 
       <img src="Pickle Jar.jpg" alt="Pickle Jar" height="128" width="128">
@@ -59,7 +59,7 @@ HW3 -- Thank you for coming to my TED talk!
             <br>
           <a href="https://en.wikipedia.org/wiki/Pickled_cucumber#Types">Refrences</a>
         </p>
-      </div>>
+      </div>
 
       <div id = "id4">
         <h3>Showcasing Team Pickle:
